@@ -397,7 +397,7 @@ public class TestBooleanMinShouldMatch extends LuceneTestCase {
     }
 
     public void testRewriteCoord1() throws Exception {
-      final Similarity oldSimilarity = s.getSimilarity();
+      final Similarity oldSimilarity = s.getSimilarity(true);
       try {
         s.setSimilarity(new DefaultSimilarity() {
           @Override
@@ -419,7 +419,7 @@ public class TestBooleanMinShouldMatch extends LuceneTestCase {
     }
     
     public void testRewriteNegate() throws Exception {
-      final Similarity oldSimilarity = s.getSimilarity();
+      final Similarity oldSimilarity = s.getSimilarity(true);
       try {
         s.setSimilarity(new DefaultSimilarity() {
           @Override
